tests/ui/suggestions/async-closure-inline-call-suggestion.stderr
error[E0618]: expected function, found `()`
  --> $DIR/async-closure-inline-call-suggestion.rs:9:16
   |
LL |     f(async || {}());
   |                ^^--
   |                |
   |                call expression requires function
   |
help: if you meant to create this closure and immediately call it, surround the closure with parentheses
   |
LL |     f((async || {})());
   |       +           +

error[E0277]: `{async closure@$DIR/async-closure-inline-call-suggestion.rs:9:7: 9:15}` is not a future
  --> $DIR/async-closure-inline-call-suggestion.rs:9:7
   |
LL |     f(async || {}());
   |     - ^^^^^^^^^^^^^ `{async closure@$DIR/async-closure-inline-call-suggestion.rs:9:7: 9:15}` is not a future
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/async-closure-inline-call-suggestion.rs:9:7: 9:15}`
note: required by a bound in `f`
  --> $DIR/async-closure-inline-call-suggestion.rs:4:20
   |
LL | async fn f(c: impl Future<Output = ()>) {
   |                    ^^^^^^^^^^^^^^^^^^^ required by this bound in `f`
help: use parentheses to call this closure
   |
LL -     f(async || {}());
LL +     f((async || {}())());
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0618.
For more information about an error, try `rustc --explain E0277`.
